@@ -17,6 +17,7 @@ Changelog
 - Updated sitemap.xml.gz generation view, calculate priority for each object, according to the getPrioritySitemapxml metadata [fdelia]
 - Personalized main_template for added itemscope and itemtype attributes to tag body [fdelia]
 - Migrated properties to annotations [fdelia]
+- Added upgradeStep for migrate the existing properties to annotations [fdelia]
 
 0.1.0 (2011-07-20)
 ------------------
